# Risk_Measure

./: .gitignore  ABR_tokens.json  AGENTS.md  AMH_tokens.json  ATMU_tokens.json  Attention_Scores.xlsx  BCPC_tokens.json  CIO_tokens.json  CIVI_tokens.json  CPT_tokens.json  CTRE_tokens.json  FET_tokens.json  GORO_tokens.json  GloVe.py  JOUT_tokens.json  KOP_tokens.json  KRC_tokens.json  LICENSE  LNG_tokens.json  PLMR_tokens.json  README.md  REG_tokens.json  Risk_Word_Frequency.xlsx  TDS_tokens.json  TF-IDF.py  TNC_tokens.json  WTRG_tokens.json  attention.py  attention_scores_huggingface.py  attention_测试.py  data_wrds.py  demo_57条_dic.xlsx  demo_attention.py  demo_attention_version1_1.py  demo_attention_version1_2.py  dictionary_SC.py  dictionary_risk.py  meeting_scores.xlsx  meeting_scores_57.xlsx  meeting_scores_attention.xlsx  (+4 more)
examples/: EarningCall_demo.xlsx
glove/: sample_glove.txt  temp.txt
scripts/: run_measure.py
src/risk_measure/: __init__.py  cli.py
src/risk_measure/data/: expanded_risk_words.txt  expanded_sc_words.txt
tests/: test_data_wrds.py  test_risk_measure.py
